<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    tools:context=".ProfileNeighbourActivity">

    <!--TODO: Placer dans un LAyout proprement (autre format d'écran = gros danger!) -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_profile_favoris_floatingButton"
        android:layout_width="55dp"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="230dp"


        android:clickable="true"

        android:outlineAmbientShadowColor="@color/transparent"
        app:backgroundTint="@color/white"
        app:layout_constraintVertical_bias="0.368"
        android:focusable="true"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />


    <ImageView
        android:id="@+id/activity_profile_avatar_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="center"

        android:contentDescription="TODO"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/activity_profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:clickable="true"
        app:backgroundTint="@color/transparent"

        android:contentDescription="Back"
        android:focusable="true"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />


    <TextView

        android:id="@+id/activity_profile_nomAvatar_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="180dp"
        android:background="@color/fond_leger"
        android:text="$NOM$"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:orientation="vertical"

        android:weightSum="4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp">

                <TextView
                    android:id="@+id/activity_profile_nomInfos_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingStart="18dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="3dp"
                    android:text="$NOM$"
                    android:textColor="#FF000000"
                    android:textSize="23sp" />

                <!--Ligne de séparation-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="50dp"
                    android:background="@color/fond_leger" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@color/white"
                    android:paddingStart="15dp"
                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="TODO"
                        app:srcCompat="@drawable/ic_place_black_24dp" />
                    <TextView
                        android:id="@+id/activity_profile_adresse_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="Adresse"
                        android:autoLink="map"
                        android:maxLines="1"
                         />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:paddingBottom="30dp"
                    android:background="@color/white"
                    android:paddingStart="15dp"
                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="TODO"
                        app:srcCompat="@drawable/ic_phone_black_24dp" />
                    <TextView
                        android:id="@+id/activity_profile_tph_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="Numéro TPH"
                        android:autoLink="phone"
                        android:maxLines="1"
                        android:textColorLink="@color/basic"
                        android:textStyle="normal"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:paddingBottom="30dp"
                    android:background="@color/white"
                    android:paddingStart="15dp"
                    android:orientation="horizontal" >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="TODO"
                        app:srcCompat="@drawable/ic_public_black_24dp" />
                    <TextView
                        android:id="@+id/activity_profile_social_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="Page FB"
                        android:autoLink="web"
                        android:maxLines="1"
                        android:textColorLink="@color/basic"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                tools:ignore="UnusedAttribute">

                <TextView
                    android:id="@+id/textView_aproposdemoi_pasToucher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/white"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="2dp"
                    android:text="A propos de moi"
                    android:textColor="#FF000000"
                    android:textSize="23sp"
                    tools:ignore="UnusedAttribute" />

                <!--Ligne de séparation -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="48dp"
                    android:background="@color/fond_leger" />

                <TextView
                    android:id="@+id/description_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"

                    android:background="@color/white"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="Blabla"
                    android:textSize="14sp" />

            </android.support.v7.widget.CardView>


        </LinearLayout>


    </LinearLayout>


</FrameLayout>
</ScrollView>